
origin/master

  (none)

3.0.2        2014-01-22

  [ENHANCEMENTS]

  - Support '-%>' for newline suppression in ERB templates
    Any ERB ruby snippet ending with '-%>' (instead of just '%>'), will
    ignore trailing whitespace.

  [BUG FIXES]

  - Fix truncation of `cw mesh` result output at 8-characters
    The full output will now be shown, in all output formats.

  - Fix calls to util.group.member to res.group.member
    Prevents internal fatals on clockd leading to assertion bails.

3.0.1         2014-01-21

  [ENHANCEMENTS]

  - `pn` Command-line argument to change include path
    The pn utility now takes zero or more `-I /path/to/include` arguments, à
    la gcc/clang/other compilers.

  - Better Template / Source file Error Reporting
    clockd now propagates error messages encountered during a [SHA1] PDU
    exchange to cogd, so that they can be displayed in the logs on the
    affected host, or to the terminal of a manual run.

  - Guard against function redefinition
    It is now a fatal error to redefine a function (fn) block in Pendulum.
    This, combined with a new function lookup algorithm, eliminates a
    loophole allowing stdlib functions to be overridden by callers.

  - Mesh Standard Library
    The guts of mesh command implementation now exist in mesh.pn, a Pendulum
    module.  Mesh commands do minimal argument parsing / validation and then
    call into this library, easing maintenance and enabling experimentation.

  - Skip Disassembly / Coverage of ignore modules
    When pcov generates a report, it will now skip the disassembly output
    for all modules it is ignoring code coverage calculations for.

  [BUG FIXES]

  - Fix handling of automatic user and group ID numbers
    A mismatch between the definition of res.user.present and
    res.group.present in stdlib, and the C res_*_gencode() functions caused
    users and groups without hard-set UID/GID values to become UID/GID 0.

  - Fix handling of res_exec 'test' guards